compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__block_expr_into_pipe.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 23
expression: "fn id(a) { a }\npub fn main() {\n  {\n    let x = 1\n    x\n  }\n  |> id\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec id(L) -> L.
id(A) ->
    A.

-spec main() -> integer().
main() ->
    _pipe = begin
        X = 1,
        X
    end,
    id(_pipe).

