compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__clever_pipe_rewriting-2.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 13
expression: "\npub fn apply(f: fn(a, Int) -> b, a: a) { a |> f(1) }\n"

---
-module(the_app).
-compile(no_auto_import).

-export([apply/2]).

-spec apply(fun((L, integer()) -> M), L) -> M.
apply(F, A) ->
    _pipe = A,
    F(_pipe, 1).

