compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__clever_pipe_rewriting.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 6
expression: "\npub fn apply(f: fn(a) -> b, a: a) { a |> f }\n"

---
-module(the_app).
-compile(no_auto_import).

-export([apply/2]).

-spec apply(fun((L) -> M), L) -> M.
apply(F, A) ->
    _pipe = A,
    F(_pipe).

