compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__pipe_in_case_subject.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 59
expression: "pub fn x(f) {\n  case 1 |> f {\n    x -> x\n  }\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([x/1]).

-spec x(fun((integer()) -> O)) -> O.
x(F) ->
    case begin
        _pipe = 1,
        F(_pipe)
    end of
        X ->
            X
    end.

