compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__pipe_in_tuple.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
assertion_line: 48
expression: "pub fn x(f) {\n  #(\n    1 |> f\n  )\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([x/1]).

-spec x(fun((integer()) -> N)) -> {N}.
x(F) ->
    {begin
         _pipe = 1,
         F(_pipe)
     end}.

